--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="style.css">
+        <style>
+            body{
+                background-color: darkgoldenrod;
+            }
+        </style>
     </head>
 <body>
 
