--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <style>
             body{
                 background-color: darkgoldenrod;
+                font-weight: 500;
             }
         </style>
     </head>
