--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
                 background-color: darkgoldenrod;
                 font-weight: 500;
             }
+            h1{
+                background-color: white;
+            }
+            
         </style>
     </head>
 <body>
