--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
         "தீதும் நன்றும் பிறர் தர வாரா" (Nothing good or bad can be done by others),
          "தீமைக்கும் நன்மை செய்" (Be good to your enemies too), "அரிது அரிது மானிடராய்ப் பிறத்தல் அரிது"
           (It is rarest to be born as a human), "பிறப்பொக்கும் எல்லா உயிர்க்கும்" (Every creature is equal at birth),
-           and "செல்வத்துப் பயனே ஈதல்" (The only use of wealth is to donate). </p>
+           and "செல்வத்துப் பயனே ஈதல்" (The only use of wealth is to donate)*****</p>
 </body>
 </html>
