--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 
     <h1>
         "தீதும் நன்றும் பிறர் தர வாரா"
-        This is the quotes of the reallife and we are must follow this amazing lines innour life. so   </h1>
+        This is the quotes of the reallife.
+    </h1>
     <p>
         ****"தீதும் நன்றும் பிறர் தர வாரா" (Nothing good or bad can be done by others),
          "தீமைக்கும் நன்மை செய்" (Be good to your enemies too), "அரிது அரிது மானிடராய்ப் பிறத்தல் அரிது"
