--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <h1>
         "தீதும் நன்றும் பிறர் தர வாரா"
-        This is the quotes of the reallife.
+        This is the quotes of the reallife.so,this is the plan.
     </h1>
     <p>
         ****"தீதும் நன்றும் பிறர் தர வாரா" (Nothing good or bad can be done by others),
