--- a/src/index.html
+++ b/src/index.html
@@ -1,33 +1,19 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <style>
-            body{
-<<<<<<< HEAD
-                background-color: rgb(163, 28, 107);
-=======
-                background-color: darkgoldenrod;
->>>>>>> aeaed4bec586d49abaa60ff42907a9925c68b7b4
-            }
-            h1{
-                background-color: white;
-            }
-            
-        </style>
-    </head>
+       
 <body>
 
     <h1>
         "தீதும் நன்றும் பிறர் தர வாரா"
-<<<<<<< HEAD
+ HEAD
         This is the quotes of the reallife.so,this is the plan for dhil life.
 =======
-<<<<<<<< HEAD:index.html
+HEAD:index.html
         This is the quotes of the reallife.
 ========
-        This is the quotes of the reallife.so,this is the plan for dhil life.
->>>>>>>> aeaed4bec586d49abaa60ff42907a9925c68b7b4:src/index.html
->>>>>>> aeaed4bec586d49abaa60ff42907a9925c68b7b4
+        This is the quotes of the reallife.so,this is the plan for dhil life aeaed4bec586d49abaa60ff42907a9925c68b7b4:src/index.html
+ aeaed4bec586d49abaa60ff42907a9925c68b7b4
     </h1>
     <p>
         ****"தீதும் நன்றும் பிறர் தர வாரா" (Nothing good or bad can be done by others),
