--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,21 @@
 <!DOCTYPE html>
 <html>
     <head>
-       
+        <style>
+
+            body{
+                    background-color: gold;
+               }
+
+            h1{
+                background-color: greenyellow;
+            }
+
+
+        </style>
+            
+
+    </head>
 <body>
 
     <h1>
