--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,10 @@
                }
 
             h1{
-                background-color: greenyellow;
+                background-color: rgb(255, 47, 200);
+            }
+            p{
+                background-color: cadetblue;
             }
 
 
