--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
                 background-color: rgb(255, 47, 200);
             }
             p{
-                background-color: cadetblue;
+                background-color: rgb(118, 95, 160);
             }
 
 
