--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
         <style>
 
             body{
-                    background-color: gold;
+                    background-color: rgb(0, 255, 13);
                }
 
             h1{
