--- a/src/index.html
+++ b/src/index.html
@@ -28,6 +28,10 @@
          (Nothing good or bad can be done by others),
         (Be good to your enemies too), 
           (It is rarest to be born as a human),  (Every creature is equal at birth),
-           and (The only use of wealth is to donate)</p>
+           and (The only use of wealth is to donate)
+           Right now I am trying to be in a place of calm, a place where I can chill out and then handle the chaos of life better. ...
+           Never be in a hurry; do everything quietly and in a calm spirit. ...
+           Be like a duck. ...
+           Calm mind brings inner strength and self-confidence, so that's very important for good health.</p>
 </body>
 </html>
