--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,11 @@
         be good and be calm 
     </h1>
     <p>
-         (Nothing good or bad can be done by others),
+         (Nothing good or bad can be done by others)
+         Right now I am trying to be in a place of calm, a place where I can chill out and then handle the chaos of life better. ...
+Never be in a hurry; do everything quietly and in a calm spirit. ...
+Be like a duck. ...
+Calm mind brings inner strength and self-confidence, so that's very important for good health.
         </p>
 </body>
 </html>
