--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,8 @@
                }
 
             h1{
-                background-color: rgb(141, 141, 141);
+                background-color: rgb(255, 255, 255);
+                color: black;
             }
             p{
                 background-color: rgb(86, 144, 210);
@@ -24,8 +25,8 @@
     <h1>
         be good and be calm 
     </h1>
-    <p>
+    <h1>
         Devops 
-        </p>
+    </h1>
 </body>
 </html>
